--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,28 @@ google-services.json
 
 # Android Profiling
 *.hprof
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Python
+__pycache__/
+*.py[cod]ㅁㅊ
+*$py.class
+*.so
+.Python
+venv/
+env/
+ENV/
+
+
+# 빌드 결과물 제외
+bin/
+build/
+out/
+obj/
+
+# Docker
+.dockerignore
