--- a/android-app/build.gradle
+++ b/android-app/build.gradle
@@ -3,4 +3,5 @@ plugins {
     id 'com.android.application' version '8.2.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.20' apply false
     id 'com.google.gms.google-services' version '4.4.0' apply false
+    id 'org.jetbrains.kotlin.plugin.compose' version '2.0.21' apply false
 }
