--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,32 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+# FastAPI & ASGI Server
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+
+# Authentication & Security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-pydantic==2.5.0
-pydantic-settings==2.1.0
-motor==3.3.2
-google-generativeai==0.3.1
-firebase-admin==6.2.0
-python-dotenv==1.0.0
+
+# File Upload
+python-multipart==0.0.12
+
+# Data Validation & Settings
+pydantic==2.9.2
+pydantic-settings==2.5.2
+
+# Database
+motor==3.6.0
+
+# AI & ML
+google-generativeai==0.8.3
+
+# Firebase
+firebase-admin==6.5.0
+
+# Environment Variables
+python-dotenv==1.0.1
+
+# Image Processing
+Pillow==10.4.0
+
+# HTTP Client (for image search API)
+httpx==0.27.2
