fix: 보안 강화 및 죽은 코드 제거
- CORS ["*"] → 특정 origin 제한
- Firebase 경로 하드코딩 → settings 참조
- deps.py 중복 Firebase 초기화 제거
- generate_plant_data_schema 미사용 함수 제거
- image_search_service.py 삭제 (미사용)
- .gitignore에 .claude/ 추가

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ app/serviceAccountKey.json
 # Android Profiling
 *.hprof
 
+# Claude Code
+.claude/
+
 # Environment variables
 .env
 .env.local
@@ -120,17 +123,12 @@ logs/
 *.log.*
 *.log.old
 
-# 데이터 파일 
-/backend/data/
+# 데이터 파일
+backend/data/
 
-# 스크립트트
+# 스크립트
 scripts/
-
-
 
 # Docker
 .dockerignore
-
-# Backend data files (large JSON files for DB seeding)
-backend/data/
 
