--- a/android-app/app/build.gradle
+++ b/android-app/app/build.gradle
@@ -5,6 +5,14 @@ plugins {
     id 'org.jetbrains.kotlin.plugin.compose'
 }
 
+// local.properties에서 서버 URL 읽기
+def localProps = new Properties()
+def localPropsFile = rootProject.file('local.properties')
+if (localPropsFile.exists()) {
+    localProps.load(localPropsFile.newDataInputStream())
+}
+def serverUrl = localProps.getProperty('SERVER_URL', 'http://10.0.2.2:8000/')
+
 android {
     namespace = 'com.example.plant'
     compileSdk 36
@@ -17,6 +25,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "BASE_URL", "\"${serverUrl}\""
     }
 
     buildTypes {
@@ -42,6 +52,7 @@ android {
     buildFeatures {
         viewBinding = true
         compose = true
+        buildConfig = true
     }
 
     // 16 KB 페이지 크기 기기와의 호환성을 위한 설정
@@ -102,6 +113,8 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.11.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation platform('androidx.compose:compose-bom:2024.09.00')
