test: Backend pytest 46개 추가 및 README 정리
- test_plant_repository (8개): 학명 퍼지 매칭, 이름 조회
- test_plant_service (7개): 이미지 검색, 추천 에세이
- test_user_repository (6개): 소프트 삭제, 찜 관리
- test_services (14개): 인증, 프로필, 찜 토글
- test_api (10개): 엔드포인트 E2E 테스트
- Postman Collection 추가
- README 전면 개편 (총 95개 테스트 문서화)

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-# .env 파일 예시 
+# .env 파일 예시
 
-#MongoDB Atlas URL 삽입
-MONGODB_URL="mongodb+srv://<id>:<password>@cluster0.abcde.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URI=<your-mongodb-uri>
+GEMINI_API_KEY=<your-gemini-api-key>
+FIREBASE_STORAGE_BUCKET=<your-bucket>.appspot.com
